--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
-  "version": 2,
   "functions": {
-    "api/**/*.php": {
-      "runtime": "vercel-php@0.7.1"
-    }
+    "api/**/*.php": { "runtime": "vercel-php@0.7.1" },
+    "admin/**/*.php": { "runtime": "vercel-php@0.7.1" },
+    "kasir/**/*.php": { "runtime": "vercel-php@0.7.1" },
+    "login/**/*.php": { "runtime": "vercel-php@0.7.1" },
+    "*.php": { "runtime": "vercel-php@0.7.1" }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/$1" }
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
   ]
 }
