--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.php": { "runtime": "vercel-php@0.7.1" },
-    "**/*.php": { "runtime": "vercel-php@0.7.1" }
+    "api/**/*.php": {
+      "runtime": "vercel-php@0.7.1"
+    }
   },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
+    { "src": "/(.*)", "dest": "/api/$1" }
   ]
 }
